--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "savvy-starter",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "parcel-build": "parcel build index.html && cp _redirects ./dist/",
+    "serve": "parcel index.html"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "1.19.1",
-    "node": "^16.13.1"
+    "node": "^16.13.1",
+    "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "parcel": "^2.15.2",
     "yargs-parser": ">=13.1.2"
   }
 }
