--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "navigo": "^8.11.1",
     "parcel": "^2.15.2",
     "yargs-parser": ">=13.1.2"
   }
