--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "html-literal": "^1.1.0",
+    "lodash": "^4.17.21",
     "navigo": "^8.11.1",
     "parcel": "^2.15.2",
     "yargs-parser": ">=13.1.2"
