--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.3.1",
         "node": "^16.13.1",
-        "prettier": "1.19.1"
+        "prettier": "1.19.1",
+        "process": "^0.11.10"
     },
     "dependencies": {
         "axios": "^1.9.0",
