--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "name": "savvy-starter",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "scripts": {
         "parcel-build": "parcel build index.html && cp _redirects ./dist/",
-        "serve": "parcel index.html"
+        "serve": "parcel index.html",
+        "app:watch": "nodemon --watch ./server -e js ./server/app.js"
     },
     "keywords": [],
     "author": "",
@@ -14,17 +16,20 @@
         "eslint": "^8.4.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.3.1",
-        "node": "^16.13.1",
+        "nodemon": "^3.1.10",
+        "parcel": "^2.15.2",
         "prettier": "1.19.1",
         "process": "^0.11.10"
     },
     "dependencies": {
         "axios": "^1.9.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.5.0",
+        "express": "^5.1.0",
         "html-literal": "^1.1.0",
         "lodash": "^4.17.21",
+        "mongoose": "^8.16.1",
         "navigo": "^8.11.1",
-        "parcel": "^2.15.2",
         "yargs-parser": ">=13.1.2"
     }
 }
