--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "license": "ISC",
     "devDependencies": {
         "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.1",
         "eslint": "^8.4.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "events": "^3.3.0",
+        "https-browserify": "^1.0.0",
         "nodemon": "^3.1.10",
+        "os-browserify": "^0.3.0",
         "parcel": "^2.15.2",
+        "path-browserify": "^1.0.1",
         "prettier": "1.19.1",
-        "process": "^0.11.10"
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.4",
+        "util": "^0.12.5"
     },
     "dependencies": {
         "axios": "^1.9.0",
@@ -30,6 +39,7 @@
         "lodash": "^4.17.21",
         "mongoose": "^8.16.1",
         "navigo": "^8.11.1",
+        "nodemailer": "^7.0.4",
         "yargs-parser": ">=13.1.2"
     }
 }
