--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "util": "^0.12.5"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "@emailjs/nodejs": "^5.0.2",
         "axios": "^1.9.0",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
